--- a/refs.bib
+++ b/refs.bib
@@ -489,7 +489,7 @@ keywords={Web services;application program interfaces;hypermedia markup language
 
 @article{Myers_study,
  author = {Myers, Brad and Jeong, Sae and Xie, Yingyu and Beaton, Jack and Stylos, Jeff and Ehret, Ralf and Karstens, Jan and Efeoglu, Arkin and Busse, Daniela K.},
- title = {Studying the Documentation of an API for Enterprise Service-Oriented Architecture},
+ title = {Studying the Documentation of an {API} for Enterprise Service-Oriented Architecture},
  journal = {J. Organ. End User Comput.},
  issue_date = {January 2010},
  volume = {22},
