--- a/controlled_study/refs.bib
+++ b/controlled_study/refs.bib
@@ -264,8 +264,8 @@ year={2008},
 volume={1},
 pages={619-625},
 publisher=ieee,
-OPTpublisher={IEEE/WIC/ACM},
-keywords={Web services;Web sites;hypermedia markup languages;HTML documents;HTML microformat;MicroWSMO;RESTful Web services;SA-REST;Web 2.0;Web sites;hRESTS;machine-oriented API;machine-readable API descriptions;programmable Web;Automation;Data mining;Documentation;HTML;Intelligent agent;Mashups;Resource description framework;USA Councils;Web pages;Web services;RESTful Web services;microformat;service description},
+OPTpublisher={IEEE/WIC/ACM}
+},
 
 @INPROCEEDINGS{Espinha_web,
 author={Espinha, T. and Zaidman, A and Gross, H.-G.},
@@ -305,8 +305,8 @@ author={Ruo Meng and Chengwan He},
 booktitle={Proc. of International Conference on Computer Sciences and Applications (CSA)},
 title={A Comparison of Approaches to Web Service Evolution},
 year={2013},
-pages={138-141},
-keywords={Web services;software maintenance;Web service evolution;evolution granularity;evolution maintainability;evolution scalability;evolution terminal;evolution type;Coordinate measuring machines;Libraries;Scalability;Semantics;Servers;Web services;XML;Web service evolution;changes;compare;directions;solutions},
+pages={138-141}
+},
 
 
 @INPROCEEDINGS{zuo6928972,
@@ -347,7 +347,7 @@ booktitle={In Proc. of ICSE Workshop on Search-Driven Development - Users, Infra
 title={On designing better tools for learning {API}s},
 year={2012},
 pages={27-30},
-keywords={application program interfaces;computer science education;software engineering;API learning;application programming interfaces;code examples;design implications;first-class documentation artifacts;learning materials;professional developers;search engine development;software development;Blogs;Context;Documentation;Materials;Programming;Radio access networks;Web search},
+},
 
 @article{Hoffman_api_documentation,
  author = {Hoffman, Daniel and Strooper, Paul},
@@ -376,7 +376,6 @@ keywords={application program interfaces;computer science education;software eng
   booktitle = {Proc of. {IEEE} International Conference on Software Maintenance},
   pages     = {25--34},
   year      = {2012},
-  crossref  = {DBLP:conf/icsm/2012},
   timestamp = {Mon, 14 Jan 2013 14:23:29 +0100},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 },
@@ -429,8 +428,8 @@ author={Stepalina, E.},
 booktitle={Proc. of 2010 Central and Eastern European Software Engineering Conference (CEE-SECR)},
 title={{SaaS} support in software documentation systems},
 year={2010},
-pages={192-197},
-keywords={Web sites;XML;cloud computing;document handling;software engineering;systems analysis;τasont;Astoria On Demand;Atlassian;Bluestream XDocs;Central Desktop;Confluence;DITA Exchange;DITA-orientedXML CMS;DocZone;EditMe;Incentive;JIRA Studio;Metadot Wiki;MindTouch;Netcipia;PBWiki;SaaS business model;SaaS support;Siberlogic SiberSafe;Trisoft Infoshare;Wagn;Wikia;Wikidot;Wikispaces;X-Hive Docato;bug tracking systems;documentation publishing;open source BusinessWiki;quality controlling tools application;ready-to-install products;requirement analysis;software companies;software developments tools;software documentation systems;task tracking systems;Documentation;Electronic publishing;Google;Information services;Internet;Subscriptions;XML;SaaS;Software documentation;XML CMS;wiki},
+pages={192-197}
+},
 
 @inproceedings{Jadeite,
  author = {Stylos, Jeffrey and Myers, Brad and Yang, Zizhuang},
@@ -453,8 +452,8 @@ booktitle={International Conference on Web Services },
 title={Validation and Interactivity of Web {API} Documentation},
 year={2013},
 pages={523-530},
-publisher = {IEEE},
-keywords={Internet;application program interfaces;hypermedia markup languages;knowledge representation languages;HTML;HTTP;RDFa annotations;WADL;WIfL semantics;WIfL tools;WIfL vocabulary;WSDL;Web API documentation interactivity;Web API documentation validation;Web Interface Language;application protocol;formal presentation;human-readable documentation;internal consistency;machine-readable API description;Context;Documentation;HTML;Protocols;Resource description framework;Vocabulary;XML;API;Documentation;HTTP;Validation;Web API},
+publisher = {IEEE}
+},
 
 @inproceedings{Verborgh_functional,
  author = {Verborgh, Ruben and Steiner, Thomas and Van Deursen, Davy and Coppens, Sam and Vall{\'e}s, Joaquim Gabarr\'{o} and Van de Walle, Rik},
@@ -476,16 +475,16 @@ author={Mangler, J. and Beran, P.P. and Schikuta, E.},
 booktitle={Cluster, Cloud and Grid Computing (CCGrid), IEEE/ACM International Conference on},
 title={On the Origin of Services Using RIDDL for Description, Evolution and Composition of RESTful Services},
 year={2010},
-pages={505-508},
-keywords={Automatic testing;Cloud computing;Computer science;Grid computing;Natural languages;Representational state transfer;Simple object access protocol;Skeleton;Visualization;XML;Composition;Description;Evolution;RESTful},
+pages={505-508}
+},
 
 @INPROCEEDINGS{Ning_omnivoke,
 author={Ning Li and Pedrinaci, C. and Maleshkova, M. and Kopecky, J. and Domingue, J.},
 booktitle={Proc. of IEEE International Conference on Semantic Computing },
 title={{OmniVoke}: A Framework for Automating the Invocation of Web {APIs}},
 year={2011},
-pages={39-46},
-keywords={Web services;application program interfaces;hypermedia markup languages;HTML pages;OmniVoke;Web API innovation;Web services;nonintrusive semantic annotations;Grounding;HTML;Ontologies;Resource description framework;Semantics;Vocabulary;Web services;Web APIs;grounding;semantic Web services;service invocation},
+pages={39-46}
+},
 
 @article{Myers_study,
  author = {Myers, Brad and Jeong, Sae and Xie, Yingyu and Beaton, Jack and Stylos, Jeff and Ehret, Ralf and Karstens, Jan and Efeoglu, Arkin and Busse, Daniela K.},
@@ -711,18 +710,6 @@ month={Dec},},
  acmid = {2790820},
  address = {New York, NY, USA},
  keywords = {Evolution Management, JSON, MDA, REST},
-},
-
-@inproceedings{DBLP:conf/kbse/SohanAM15,
-  author    = {SM. Sohan and
-               Craig Anslow and
-               Frank Maurer},
-  title     = {SpyREST: Automated RESTful {API} Documentation Using an {HTTP} Proxy
-               Server},
-  booktitle = {Proc. of {IEEE/ACM} International Conference on Automated Software Engineering,
-               {ASE}, Lincoln, NE, USA},
-  pages     = {271--276},
-  year      = {2015},
 },
 
 @inproceedings{DBLP:conf/kbse/SohanAM15a,
