--- a/root.tex
+++ b/root.tex
@@ -140,10 +140,10 @@ Paragraph 3
 \listofsymbols
 \pagestyle{plain}
 \clearpage
-\newcommand*{\RootPath}{../thesis}%
 
 \pagenumbering{arabic}
 \graphicspath{{controlled_study/}}
+\pgfplotsset{table/search path={controlled_study}}
 \include{controlled_study/controlled_study}
 \appendix
 \end{document}
